# cheddar-fhe

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  primegen32.py
include/: Export.h  Random.h  UserInterface.h
include/common/: Assert.h  Basic.cuh  CommonUtils.h  ConstantMemory.cuh  DoubleWord.h  PrimeUtils.h  PtrList.h
include/core/: BigInt.h  Container.h  Context.h  DeviceVector.h  ElementWise.h  Encode.h  EvkMap.h  EvkRequest.h  MemoryPool.h  ModSwitch.h  MultiLevelCiphertext.h  NPInfo.h  NTT.h  NTTUtils.cuh  Parameter.h  Type.h
include/extension/: BootContext.h  BootParameter.h  EvalMod.h  EvalPoly.h  EvalSpecialFFT.h  Hoist.h  LinearTransform.h  StripedMatrix.h
parameters/: bootparam_30.json  bootparam_35.json  bootparam_40.json  bootparam_40_64bit.json
src/: UserInterface.cu
src/core/: BigInt_gmp.cpp  BigInt_tommath.cpp  Container.cpp  Context.cpp  DeviceVector.cpp  ElementWise.cu  Encode.cpp  EvkMap.cpp  EvkRequest.cpp  MemoryPool.cpp  ModSwitch.cu  MultiLevelCiphertext.cpp  NPInfo.cpp  Parameter.cu
src/extension/: BootContext.cpp  BootParameter.cpp  EvalMod.cpp  EvalPoly.cpp  EvalSpecialFFT.cpp  Hoist.cu  LinearTransform.cpp  StripedMatrix.cpp
unittest/: BasicTest.cpp  Bootstrapping.cpp  CMakeLists.txt  Testbed.h
